--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.0)
 
 project(aimotive)
 
-include_directories(${PROJECT_NAME} src/fields)
+include_directories(${PROJECT_NAME} src src/fields)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp src/map.cpp)
